MockCurrency/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mockcurrency
  namespace: apis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /mock-currency(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mockcurrency
                port:
                  number: 80
